# Netologiya

./: .gitignore
Final project/: BDcontrol.cpp  CMakeLists.txt  DBcontrol.cpp  DBcontrol.h  Final project.xmind  HttpClient.cpp  HttpClient.h  HttpServer.cpp  HttpServer.h  HttpsClient.cpp  HttpsClient.h  Indexer.cpp  Indexer.h  IniParser.h  Link.h  SafeQueue.h  SafeSet.h  ThreadPool.h  configurator.ini  docker-compose.yaml  main.cpp  main_page.html  output.txt  root_certificates.hpp
Final project/server_data/: index.html
Final project_client/: DBcontrol.cpp  configurator.ini  main.cpp  start_page.html
Final project_server/: CMakeLists.txt  HttpServerFcns.cpp  HttpServerFcns.h  main1.cpp
Final project_server/server_data/: searchResults.html
Module_1/1.10/1/: 1.10.1.cpp  Task1.h
Module_1/1.10/2/: Task2.cpp  Task2.h
Module_1/1.10/3/: 1.10.3.cpp  Task3.cpp  Task3.h
Module_1/1.11/: 1.11.1_2.cpp
Module_1/1.3/: homework1.3.1_2.cpp
Module_1/1.4/: 1.4.1_2_3.cpp
Module_1/10/1/: Task1.cpp
Module_1/10/2/: 1.10.2.cpp
Module_1/12/1/: 1.11.1.cpp
Module_1/12/2/: 1.11.2.cpp
Module_1/12/3/: 1.12.3.cpp
Module_1/12/4/: 1.11.4.cpp  Task4.cpp  Task4.h
Module_1/3/: homework1.3.3.cpp  homework1.3.4.cpp  main.cpp
Module_1/5/: 1.5.1_2_3_4.cpp
Module_1/6/: 1.6.1_2_3.cpp
Module_1/7/: 1.7.1_2.cpp
Module_1/8/: 1.8.1_2.cpp
Module_1/9/: 1.9.1_2_3.cpp
Module_1/Project/: Array.cpp  Array.h  LiveGame.cpp  LiveGame.h  main.cpp
Module_3/1/1/: main.cpp
Module_3/1/2/: main.cpp
Module_3/1/3/: main.cpp
Module_3/10/1/: CMakeLists.txt  main.cpp
Module_3/10/2/: CMakeLists.txt  main.cpp
Module_3/10/2/DynamicLib/: Leaver.cpp  Leaver.h
Module_3/10/5/: CMakelists.txt  Figure.h  FiguresException.cpp  IsoscelesTriangle.cpp  Parallelogram.cpp  Quadrangle.cpp  Rhombus.cpp  RightTriangle.h  Square.cpp  Square.h  Triangle.cpp
Module_3/11/: extended_array.h  main.cpp  manual_test.h
Module_3/2/1/: main.cpp
Module_3/2/2/: main.cpp
Module_3/3/1/: in.txt  main.cpp  out.txt
Module_3/3/2/: main.cpp  out.txt
Module_3/4/1/: main.cpp
Module_3/4/2/: main.cpp
Module_3/4/3/: main.cpp
Module_3/5/1/: main.cpp  myMath.cpp  myMath.h
Module_3/5/2/: Counter.cpp  Counter.h  main.cpp
Module_3/5/3/: EquilateralTriangle.cpp  EquilateralTriangle.h  Figure.cpp  Figure.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  RightTriangle.cpp  RightTriangle.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
Module_3/6/1/: main.cpp
Module_3/6/2/: main.cpp
Module_3/7/1/: main.cpp
Module_3/7/2/: Rectangle.h  (+5 more)
Module_3/Project/: AirTransport.cpp  AirTransport.h  AllTerrainBoots.cpp  AllTerrainBoots.h  Broom.cpp  Broom.h  CMakelists.txt  Camel.cpp  Camel.h  CamelFast.cpp  CamelFast.h  Centaur.cpp  Centaur.h  Eagle.cpp  Eagle.h  FSM.cpp  FSM.h  FlyingCarpet.cpp  FlyingCarpet.h  LandTransport.cpp  LandTransport.h  RaceCoordinator.cpp  RaceCoordinator.h  Transport.cpp  Transport.h  main.cpp
Module_4/1/: README.MD
Module_4/2/: main.cpp
Module_5/1/: main.cpp
Module_5/3/1/: CMakeLists.txt  main.cpp
Module_5/3/2/: CMakeLists.txt  main.cpp
Module_5/Project/: IniParser.cpp  IniParser.h  IniParser.inl  filename.ini  main.cpp
Module_6/2/: docker-compose.yaml
Module_6/6/1/: Book.h  CMakeLists.txt  Publisher.h  Sale.h  Shop.h  Stock.h  main.cpp
Module_7/Project/: main.cpp
(+80 files in other folders)
